--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <img class="about__sun-image" src="img/sun.png">
     <img class="about__image" src="img/solar-panel.png">
 </div>
+<div></div>
 </section>
     </body>
     </html>
