--- a/index.html
+++ b/index.html
@@ -7,24 +7,80 @@
         300;400;500;600;700;800&display=swap" rel="stylesheet">
     </head>
     <body>
-<header>
-    <img class="header__logo" src='img/logo.svg'>
-    <div class="header__controls">
-        <a href="#contacts">Контакты</a>
-        <button>Заказать</button>
-    </div>
-</header>
-<section class="about">
-<div class="about__info">
-    <h1>Солнечные панели GreenRobotic</h1>
-    <p>Производите дешёвую экологически чистую электроэнергию из солнечного света</p>
-    <button>Узнать подробнее</button>
-</div>
-<div class="about__images">
-    <img class="about__sun-image" src="img/sun.png">
-    <img class="about__image" src="img/solar-panel.png">
-</div>
-<div></div>
-</section>
+        <header>
+            <img class="header__logo" src='img/logo.svg'>
+            <div class="header__controls">
+                <a href="#contacts">Контакты</a>
+                <button>Заказать</button>
+            </div>
+        </header>
+        <section class="about">
+            <div class="about__info">
+                <h1>Солнечные панели GreenRobotic</h1>
+                <p>Производите дешёвую экологически чистую электроэнергию из солнечного света</p>
+                <button>Узнать подробнее</button>
+            </div>
+            <div class="about__images">
+                <img class="about__sun-image" src="img/sun.png">
+                <img class="about__image" src="img/solar-panel.png">
+            </div>
+            <div></div>
+        </section>
+        <section class="form">
+            <div class="form__container">
+                <H1>Оставьте свои контакты.</H1>
+                <p>Поможем подобрать модель. <br> Выбрать удобный вариант доставки и установки. <br>Гарантия возврата денег.</p>
+                <form>
+                    <div class="form__group">
+                        <label for="name">Ваше имя</label>
+                        <input type="text" placeholder="Введите имя" id="name">
+                    </div>
+                    <div class="form__group">
+                        <label for="name">Электронный адрес</label>
+                        <input type="text" placeholder="***@yandex.ru" id="email">
+                    </div>
+                        <div class="form__group">
+                            <label for="name">Номер телефона</label>
+                            <input type="text" placeholder="7 (999) 999-99-99" id="phone">
+                        </div>
+                    <div class="form__group">
+                        <label for="name">Примерный бюджет</label>
+                        <select id="budget">
+                            <option value="10–30">10 000₽ – 30 000₽</option>
+                            <option value="30–60">30 000₽ – 60 000₽</option>
+                            <option value="60–100">60 000₽ – 100 000₽</option>
+                            <option value="100+">100 000₽</option>
+                        </select>
+                    </div>
+                    <button type="submit" class="form__submit">Отправить заявку</button>
+                </form>
+            </div>
+        </section>
     </body>
-    </html>
+    <footer>
+        <div class="footer__container">
+            <div class="footer__group">
+                <h3>Позвонить нам:</h3>
+                    <div class="footer__links">
+                        <a href="tel:74959999999">+7 (495) 999-99-99</a>
+                    </div>
+            </div>
+            <div class="footer__group">
+                <h3>Решения для дома:</h3>
+                    <div class="footer__links">
+                        <a href="#">Солнечные панели GreenRobotic</a>
+                        <a href="#">Системы солнечных панелей GreenStation</a>
+                    </div>
+            </div>
+            <div class="footer__group">
+                <h3>Компания</h3>
+                    <div class="footer__links">
+                        <a href="#">Контакты</a>
+                        <a href="#">Вакансии</a>
+                        <a href="#">СМИ</a>
+                    </div>
+            </div>
+        </div>
+        <div class="footer__copyright">GreenCorp © 2021</div>
+    </footer>
+</html>
